tests/snapshots/file@base@function@too_many_parameters.lox.snap
---
source: tests/common/mod.rs
description: "// 256 parameters.\nfun f(\n    a1,\n    a2,\n    a3,\n    a4,\n    a5,\n    a6,\n    a7,\n    a8,\n    a9,\n    a10,\n    a11,\n    a12,\n    a13,\n    a14,\n    a15,\n    a16,\n    a17,\n    a18,\n    a19,\n    a20,\n    a21,\n    a22,\n    a23,\n    a24,\n    a25,\n    a26,\n    a27,\n    a28,\n    a29,\n    a30,\n    a31,\n    a32,\n    a33,\n    a34,\n    a35,\n    a36,\n    a37,\n    a38,\n    a39,\n    a40,\n    a41,\n    a42,\n    a43,\n    a44,\n    a45,\n    a46,\n    a47,\n    a48,\n    a49,\n    a50,\n    a51,\n    a52,\n    a53,\n    a54,\n    a55,\n    a56,\n    a57,\n    a58,\n    a59,\n    a60,\n    a61,\n    a62,\n    a63,\n    a64,\n    a65,\n    a66,\n    a67,\n    a68,\n    a69,\n    a70,\n    a71,\n    a72,\n    a73,\n    a74,\n    a75,\n    a76,\n    a77,\n    a78,\n    a79,\n    a80,\n    a81,\n    a82,\n    a83,\n    a84,\n    a85,\n    a86,\n    a87,\n    a88,\n    a89,\n    a90,\n    a91,\n    a92,\n    a93,\n    a94,\n    a95,\n    a96,\n    a97,\n    a98,\n    a99,\n    a100,\n    a101,\n    a102,\n    a103,\n    a104,\n    a105,\n    a106,\n    a107,\n    a108,\n    a109,\n    a110,\n    a111,\n    a112,\n    a113,\n    a114,\n    a115,\n    a116,\n    a117,\n    a118,\n    a119,\n    a120,\n    a121,\n    a122,\n    a123,\n    a124,\n    a125,\n    a126,\n    a127,\n    a128,\n    a129,\n    a130,\n    a131,\n    a132,\n    a133,\n    a134,\n    a135,\n    a136,\n    a137,\n    a138,\n    a139,\n    a140,\n    a141,\n    a142,\n    a143,\n    a144,\n    a145,\n    a146,\n    a147,\n    a148,\n    a149,\n    a150,\n    a151,\n    a152,\n    a153,\n    a154,\n    a155,\n    a156,\n    a157,\n    a158,\n    a159,\n    a160,\n    a161,\n    a162,\n    a163,\n    a164,\n    a165,\n    a166,\n    a167,\n    a168,\n    a169,\n    a170,\n    a171,\n    a172,\n    a173,\n    a174,\n    a175,\n    a176,\n    a177,\n    a178,\n    a179,\n    a180,\n    a181,\n    a182,\n    a183,\n    a184,\n    a185,\n    a186,\n    a187,\n    a188,\n    a189,\n    a190,\n    a191,\n    a192,\n    a193,\n    a194,\n    a195,\n    a196,\n    a197,\n    a198,\n    a199,\n    a200,\n    a201,\n    a202,\n    a203,\n    a204,\n    a205,\n    a206,\n    a207,\n    a208,\n    a209,\n    a210,\n    a211,\n    a212,\n    a213,\n    a214,\n    a215,\n    a216,\n    a217,\n    a218,\n    a219,\n    a220,\n    a221,\n    a222,\n    a223,\n    a224,\n    a225,\n    a226,\n    a227,\n    a228,\n    a229,\n    a230,\n    a231,\n    a232,\n    a233,\n    a234,\n    a235,\n    a236,\n    a237,\n    a238,\n    a239,\n    a240,\n    a241,\n    a242,\n    a243,\n    a244,\n    a245,\n    a246,\n    a247,\n    a248,\n    a249,\n    a250,\n    a251,\n    a252,\n    a253,\n    a254,\n    a255, a) {} // Error at 'a': Can't have more than 255 parameters.\n"
input_file: crafting_interpreters_test_files/function/too_many_parameters.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × can't have more then 255 parameters
     ╭─[257:5]
 256 │     a254,
 257 │     a255, a) {} // Error at 'a': Can't have more than 255 parameters.
     ·     ──┬─
     ·       ╰── here
     ╰────
